BUGFIX: Z-index tava errado no modal.

--- a/frontend/src/assets/component/modal_agendamento/styles.sass
+++ b/frontend/src/assets/component/modal_agendamento/styles.sass
@@ -5,6 +5,7 @@ $modalWidth: 45%
 .modal_agendamento_container
   position: fixed
   top: 5%
+  z-index: 1001
   padding: .5% 2%
   left: (100% - $modalWidth) / 2
   width: $modalWidth
